--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Using turn.js and the new zoom feature</title>
-<meta name="viewport" content="width = 1050, user-scalable = no" />
+<meta name="viewport" content="width = 2000, user-scalable = yes" />
 <link rel="icon" type="image/png" href="pics/favicon.png" />
 <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="extras/jquery-ui-1.8.20.custom.min.js"></script>
@@ -76,7 +76,7 @@ function loadApp() {
 
 			// The number of pages
 
-			pages: 17,
+			pages: 24,
 
 			// Events
 
