--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Using turn.js and the new zoom feature</title>
-<meta name="viewport" content="width = 2000, user-scalable = yes" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link rel="icon" type="image/png" href="pics/favicon.png" />
 <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="extras/jquery-ui-1.8.20.custom.min.js"></script>
@@ -52,11 +52,11 @@ function loadApp() {
 			
 			// Magazine width
 
-			width: 922,
+			width: 1200,
 
 			// Magazine height
 
-			height: 600,
+			height: 800,
 
 			// Duration in millisecond
 
